--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Whitney Bullock"
-logo: <img src="images/headshot.jpg" alt="Headshot" width="150" />
+<img src="images/headshot.jpg" alt="Headshot" width="150" />
 description: Minimal is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
