--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,7 @@
 title: "Whitney Bullock"
 logo: "/images/headshot.jpg"
 description: 
-  Hello! I’m Whitney Bullock, a Sr. Operations Manager who specializing in technologies and languages. 
-  My GitHub highlights projects that solve real-world problems, showcase best practices, and push me 
-  to learn more. I’m passionate about AI and automation and I love collaborating with others on 
-  open-source initiatives.
+  Hello! Welcome to my GITHUB portfolio. I am Whitney Bullock, a Sr. Operations Manager specializing in global logistics strategies and cost optimization. My GitHub highlights projects that solve real-world problems, showcase best practices, and pushes me to learn more. I’m passionate about AI and automation and I love collaborating with others on open-source initiatives.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
