--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,9 @@ title: "Whitney Bullock"
 logo: "/images/headshot.jpg"
 description: 
   Hello! Welcome to my GITHUB portfolio. I am Whitney Bullock, a Sr. Operations Manager specializing in global logistics strategies and cost optimization. My GitHub highlights projects that solve real-world problems, showcase best practices, and pushes me to learn more. I’m passionate about AI and automation and I love collaborating with others on open-source initiatives.
+<br><br>
+<br><br> 
+<a href="https://www.linkedin.com/in/whitney-bullock-47ab1225/"> View My LinkedIn Profile</a>
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
