--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,8 @@ logo: "/images/headshot.jpg"
 description: |
   Hello! Welcome to my portfolio. I am a Sr. Operations Manager specializing in global logistics strategies and cost optimization. My GitHub highlights projects that solve real-world problems, showcase best practices, and pushes me to learn more. I’m passionate about AI and automation, and I love collaborating with others on open-source initiatives.
   <br><br>
-  <a href="https://www.linkedin.com/in/whitney-bullock-47ab1225/">View My LinkedIn Profile</a>
+ ### Connect With Me  
+<a href="https://www.linkedin.com/in/whitney-bullock-47ab1225/">View My LinkedIn Profile</a>
 
 show_downloads: true
 google_analytics:
